err/jerboa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jerboa'...
Compiling './lib/python3.5/site-packages/jerboa/app.py'...
***   File "./lib/python3.5/site-packages/jerboa/app.py", line 683
    except exc.HTTPMethodNotAllowed, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jerboa/config.py'...
***   File "./lib/python3.5/site-packages/jerboa/config.py", line 36
    raise ValueError, 'Not a boolean: %s' % v
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jerboa/utils.py'...
***   File "./lib/python3.5/site-packages/jerboa/utils.py", line 1321
    pairs_sorted_by_q = sorted(parsed.items(), key=lambda (lang, q): q, reverse=True)
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jerboa-0.2.2a0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
